--- a/android/src/main/res/layout/activity_incoming_call.xml
+++ b/android/src/main/res/layout/activity_incoming_call.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
 
+
     <ImageView
         android:id="@+id/avatar_img"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
-        android:scaleType="fitCenter"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:scaleType="centerCrop"
         tools:ignore="ContentDescription"
-        tools:src="@drawable/connectycube_place_holder" />
+        tools:src="@drawable/call_bg" />
+
 
     <TextView
         android:id="@+id/user_name_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/avatar_img"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="150dp"
         android:ellipsize="end"
         android:lines="1"
         android:padding="8dp"
-        android:textColor="@android:color/black"
-        android:textSize="28sp"
-        android:textStyle="bold"
+        android:textColor="#D1CDCD"
+        android:textSize="24sp"
         tools:text="User Name" />
 
     <TextView
@@ -40,36 +39,39 @@
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         android:padding="8dp"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="24sp"
+        android:textColor="#D1CDCD"
+        android:textSize="14sp"
         tools:text="Incoming audio call" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="30dp"
         android:gravity="center_horizontal">
 
-        <ImageView
-            android:id="@+id/end_call_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/selector_call_end"
-            android:onClick="onEndCall"
-            android:padding="16dp"
-            android:src="@drawable/ic_call_end"
-            tools:ignore="ContentDescription" />
 
-        <ImageView
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/end_call_btn"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:onClick="onEndCall"
+            android:paddingStart="60dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="reject.json"
+            app:lottie_loop="true"
+            tools:ignore="ContentDescription,RtlSymmetry" />
+
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/start_call_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginStart="86dp"
-            android:background="@drawable/selector_call_start"
             android:onClick="onStartCall"
-            android:padding="16dp"
-            android:src="@drawable/ic_call_start"
-            tools:ignore="ContentDescription" />
+            android:paddingEnd="60dp"
+            app:lottie_autoPlay="true"
+            app:lottie_fileName="accept.json"
+            app:lottie_loop="true"
+            tools:ignore="ContentDescription,RtlSymmetry" />
     </LinearLayout>
 </RelativeLayout>
