--- a/android/src/main/res/layout/activity_incoming_call.xml
+++ b/android/src/main/res/layout/activity_incoming_call.xml
@@ -2,34 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/call_bg"
+    android:orientation="vertical"
+    android:scaleType="centerCrop">
 
 
     <ImageView
-        android:id="@+id/avatar_img"
+        android:id="@+id/user_image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:scaleType="centerCrop"
-        tools:ignore="ContentDescription"
-        tools:src="@drawable/call_bg" />
-
-
-    <TextView
-        android:id="@+id/user_name_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:ellipsize="end"
-        android:lines="1"
-        android:padding="8dp"
-        android:textColor="#D1CDCD"
-        android:textSize="24sp"
-        tools:text="User Name" />
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription" />
+
 
     <TextView
         android:id="@+id/call_type_txt"
@@ -37,11 +25,24 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/user_name_txt"
         android:layout_centerHorizontal="true"
+        android:ellipsize="end"
+        android:lines="1"
+        android:padding="8dp"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        tools:text="We call.." />
+
+    <TextView
+        android:id="@+id/user_name_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="180dp"
         android:gravity="center_horizontal"
         android:padding="8dp"
         android:textColor="#D1CDCD"
-        android:textSize="14sp"
-        tools:text="Incoming audio call" />
+        android:textSize="24sp"
+        tools:text="User Name" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +50,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="30dp"
         android:gravity="center_horizontal">
-
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/end_call_btn"
@@ -60,7 +60,7 @@
             app:lottie_autoPlay="true"
             app:lottie_fileName="reject.json"
             app:lottie_loop="true"
-            tools:ignore="ContentDescription,RtlSymmetry" />
+            tools:ignore="ContentDescription" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/start_call_btn"
@@ -72,6 +72,8 @@
             app:lottie_autoPlay="true"
             app:lottie_fileName="accept.json"
             app:lottie_loop="true"
-            tools:ignore="ContentDescription,RtlSymmetry" />
+            tools:ignore="ContentDescription" />
+
+
     </LinearLayout>
 </RelativeLayout>
